fix up some stlying on mobile

--- a/website/public/stylesheets/blog_article.css
+++ b/website/public/stylesheets/blog_article.css
@@ -29,10 +29,8 @@ main img {
     display: block;
     margin: auto;
     max-width: 100%;
-    border: 2px solid black;
-    padding: 0.5em;
-    box-sizing: border-box;
 }
+
 
 /* Code styling */
 pre {
