--- a/website/public/stylesheets/blog_home.css
+++ b/website/public/stylesheets/blog_home.css
@@ -5,11 +5,16 @@
 }
 
 .article-card {
-    height: 300px;
     width: 300px;
-    box-sizing: border-box;
+    aspect-ratio: 1/1;
 
     transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+@media screen and (max-width: 600px) {
+    .article-card {
+        width: 80%;
+    }
 }
 
 .article-card>a {
@@ -31,7 +36,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
 }
 
@@ -42,6 +47,6 @@
 
 @media screen and (max-width: 600px) {
     .article-list {
-        width: 90%;
+        width: 100%;
     }
 }
